--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <div class="logo">
                     <a href="index.html">
                         <img src="logo.png" alt="云南悦恩环保技术咨询有限公司" class="logo-img">
-                        <span class="logo-text">云南悦恩环保技术咨询有限公司</span>
-                        <div class="logo-subtitle">Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd</div>
+                        <div class="logo-text-container">
+                            <span class="logo-text">云南悦恩环保技术咨询有限公司</span>
+                            <div class="logo-subtitle">Yunnan yueen Environmental Protection Technology Consulting Co.,Ltd</div>
+                        </div>
                     </a>
                 </div>
             </div>
@@ -30,9 +32,30 @@
                         <li class="nav-item"><a href="index.html" class="nav-link active">首页</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">关于我们</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link">服务项目</a></li>
-                        <li class="nav-item"><a href="cases.html" class="nav-link">成功案例</a></li>
+                        <li class="nav-item dropdown">
+                            <a href="cases.html" class="nav-link">技术合作 <span class="dropdown-arrow">▼</span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="services.html#environmental-assessment">建设项目环境影响评价</a></li>
+                                <li><a href="services.html#completion-acceptance">建设项目竣工保护验收</a></li>
+                                <li><a href="services.html#pollution-permit">全国排污许可证</a></li>
+                                <li><a href="services.html#drainage-permit">排水许可证</a></li>
+                                <li><a href="services.html#radiation-permit">辐射安全许可证</a></li>
+                                <li><a href="services.html#medical-radiation">放射诊疗许可证</a></li>
+                                <li><a href="services.html#emergency-plan">突发环境事件应急预案</a></li>
+                                <li><a href="services.html#treatment-facilities">污染源治理设施建设</a></li>
+                                <li><a href="services.html#wastewater-operation">污水处理设施运营维护</a></li>
+                                <li><a href="services.html#wastewater-testing">废水检测</a></li>
+                                <li><a href="services.html#waste-gas-testing">废气检测</a></li>
+                                <li><a href="services.html#noise-testing">噪声检测</a></li>
+                                <li><a href="services.html#radiation-testing">辐射检测</a></li>
+                                <li><a href="services.html#hazardous-waste">危险废物处置</a></li>
+                                <li><a href="services.html#medical-waste">医疗废物处置</a></li>
+                                <li><a href="services.html#general-waste">一般固废处置</a></li>
+                                <li><a href="services.html#government-subsidy">政府补贴申报</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a href="news.html" class="nav-link">新闻中心</a></li>
-                        <li class="nav-item"><a href="jobs.html" class="nav-link">人才招聘</a></li>
+                        <li class="nav-item"><a href="jobs.html" class="nav-link">加入我们</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
                     </ul>
                 </nav>
@@ -44,149 +67,49 @@
 
     <!-- 主视觉区 -->
     <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">云南悦恩环保 - 您值得信赖的环保伙伴</h1>
-                <p class="hero-subtitle">责任共担 · 技术驱动 · 可持续未来</p>
-                <a href="services.html" class="btn btn-secondary">了解我们的服务</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- 核心服务展示区 -->
-    <section class="section services-preview">
-        <div class="container">
-            <h2 class="section-title">核心服务</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🧠</div>
-                    <h3 class="service-title">环策（环保工作策略模式）</h3>
-                    <p class="service-desc">高阶专家智囊，为企业关键决策保驾护航</p>
-                    <a href="services.html#huance" class="btn service-btn">了解详情</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">📋</div>
-                    <h3 class="service-title">环协（环保工作协助模式）</h3>
-                    <p class="service-desc">SOP驱动的日常协理，标准化环保管理服务</p>
-                    <a href="services.html#huanxie" class="btn service-btn">了解详情</a>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">🛡️</div>
-                    <h3 class="service-title">环责（环保工作全责模式）</h3>
-                    <p class="service-desc">全权责任托管，为企业环保合规提供全面保障</p>
-                    <a href="services.html#huanze" class="btn service-btn">了解详情</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- 关于我们简介区 -->
-    <section class="section about-preview">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-image">
-                    <img src="images/about-preview.jpg" alt="云南悦恩环保技术咨询有限公司团队" style="width: 100%; height: 300px; object-fit: cover; background-color: #ddd;">
-                </div>
-                <div class="about-text">
-                    <h2 class="about-title">责任共担，技术驱动</h2>
-                    <p class="about-desc">
-                        云南悦恩环保技术咨询有限公司（简称"悦恩环保"），成立于2019年，是一家以"责任共担、技术驱动"为核心理念的创新型环保服务企业。作为全国首家通过中国质量认证中心（CQC）"环保管家"服务认证的机构，我们致力于为企业提供从顶层战略咨询到日常运营执行的一站式、可信赖的解决方案，矢志成为"政府监管服务商、企业服务总包商"，最终实现"让家园的生态环境能长期美好"的愿景。
-                    </p>
-                    <p class="about-desc">
-                        我们的独特优势：
-                    </p>
-                    <p class="about-desc">
-                        <strong>开创性的服务体系：</strong> 我们独创了由"环策"（高阶专家智囊）、"环协"（SOP驱动的日常协理）与"环责"（全权责任托管展望）构成的分层服务体系。该体系颠覆了传统咨询模式，通过与客户签订责任共担协议，将自身利益与企业的环保合规成果深度绑定，用结果为服务正名。
-                    </p>
-                    <p class="about-desc">
-                        <strong>先进的技术平台：</strong> 我们自主研发"悦恩智慧环保"平台，将大数据与人工智能（AI）深度融入服务。通过服务小程序、云端数据中心、AI专家智能体、"人机共写"平台等技术工具，我们将传统依赖个人经验的模式，升级为标准化、数字化、智能化的现代服务体系，极大地提升了服务效率与精准度。
-                    </p>
-                    <p class="about-desc">
-                        <strong>深刻的行业洞察：</strong> 我们拥有一支由创始人姚晓先生领导，技术、行政核心合伙人协同驱动的专业团队。我们深刻理解企业在环保管理中的痛点，并以"伙伴式"的服务理念在环保服务领域形成了强大的口碑和优势。
-                    </p>
-                    <p class="about-desc">
-                        <strong>明确的社会价值：</strong> 悦恩环保致力于成为政府高效监管的"前沿哨兵"和"效率放大器"，通过我们的专业服务，延伸监管触角、化解企业风险，最终构建一个"政府省心、企业安心、社会放心"的"三方共赢"环境治理新生态。
-                    </p>
-                    <p class="about-desc">
-                        悦恩环保，不仅是企业的环境健康医师，更是与政府、社会共赴一场绿水青山之约的坚定同行者。
-                    </p>
-                    <a href="about.html" class="btn">了解更多</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- 成功案例精选区 -->
-    <section class="section cases-preview">
-        <div class="container">
-            <h2 class="section-title">我们的成功实践</h2>
-            <div class="cases-grid">
-                <div class="case-card">
-                    <div class="case-image" style="background-image: url('images/case1.jpg'); background-color: #ddd;"></div>
-                    <div class="case-content">
-                        <h3 class="case-title">某化工企业废气治理项目</h3>
-                        <p class="case-desc">云南悦恩环保为大型化工企业设计并实施了完整的废气治理解决方案，实现了污染物达标排放，获得了环保部门的高度认可。</p>
-                        <a href="cases.html" class="btn">查看详情</a>
+        <div class="hero-overlay"></div>
+        <div class="hero-carousel">
+            <div class="carousel-container">
+                <div class="carousel-slide active" data-service="huance">
+                    <div class="slide-content">
+                        <h1 class="slide-title">环策</h1>
+                        <p class="slide-subtitle">高阶专家智囊，为企业关键决策保驾护航</p>
+                        <div class="slide-description">
+                            <p>专业的环保战略咨询服务，为企业提供前瞻性的环保决策支持</p>
+                        </div>
                     </div>
                 </div>
-                <div class="case-card">
-                    <div class="case-image" style="background-image: url('images/case2.jpg'); background-color: #ddd;"></div>
-                    <div class="case-content">
-                        <h3 class="case-title">医药园区环评报告编制</h3>
-                        <p class="case-desc">云南悦恩环保承担某医药产业园区的环境影响评价工作，项目顺利通过专家评审，为园区后续发展奠定了基础。</p>
-                        <a href="cases.html" class="btn">查看详情</a>
+                <div class="carousel-slide" data-service="huanxie">
+                    <div class="slide-content">
+                        <h1 class="slide-title">环协</h1>
+                        <p class="slide-subtitle">主动介入式、SOP驱动的日常运营伙伴</p>
+                        <div class="slide-description">
+                            <p>标准化的环保管理协助服务，确保企业日常运营合规高效</p>
+                        </div>
                     </div>
                 </div>
-                <div class="case-card">
-                    <div class="case-image" style="background-image: url('images/case3.jpg'); background-color: #ddd;"></div>
-                    <div class="case-content">
-                        <h3 class="case-title">电镀企业污水处理系统</h3>
-                        <p class="case-desc">云南悦恩环保为电镀企业量身定制污水处理系统，采用先进工艺技术，实现了废水的高效处理和回用。</p>
-                        <a href="cases.html" class="btn">查看详情</a>
+                <div class="carousel-slide" data-service="huanze">
+                    <div class="slide-content">
+                        <h1 class="slide-title">环责</h1>
+                        <p class="slide-subtitle">战略性、全权托管式的终极解决方案</p>
+                        <div class="slide-description">
+                            <p>全面的环保责任托管服务，为企业提供一站式环保解决方案</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- 新闻中心预览区 -->
-    <section class="section news-preview">
-        <div class="container">
-            <h2 class="section-title">最新动态</h2>
-            <div class="news-list">
-                <div class="news-item">
-                    <div class="news-date">
-                        <div class="news-day">15</div>
-                        <div class="news-month">12月</div>
-                    </div>
-                    <div class="news-content">
-                        <h3 class="news-title">新版《建设项目环境影响评价分类管理名录》正式实施</h3>
-                        <p class="news-excerpt">生态环境部发布的新版分类管理名录将于2024年1月1日起正式实施，对建设项目环评管理提出了新的要求...</p>
-                    </div>
-                </div>
-                <div class="news-item">
-                    <div class="news-date">
-                        <div class="news-day">10</div>
-                        <div class="news-month">12月</div>
-                    </div>
-                    <div class="news-content">
-                        <h3 class="news-title">云南悦恩环保荣获"2023年度优秀环保服务机构"称号</h3>
-                        <p class="news-excerpt">在刚刚结束的环保行业年度评选中，云南悦恩环保凭借优质的服务和良好的口碑，荣获"2023年度优秀环保服务机构"称号...</p>
-                    </div>
-                </div>
-                <div class="news-item">
-                    <div class="news-date">
-                        <div class="news-day">05</div>
-                        <div class="news-month">12月</div>
-                    </div>
-                    <div class="news-content">
-                        <h3 class="news-title">智慧环保平台2.0版本正式上线</h3>
-                        <p class="news-excerpt">经过半年的研发和测试，云南悦恩环保的智慧环保平台2.0版本正式上线，新增了AI智能预警、数据可视化等功能...</p>
-                    </div>
-                </div>
+            
+            <!-- 轮播控制 -->
+            <div class="carousel-controls">
+                <button class="carousel-prev" onclick="previousSlide()">‹</button>
+                <button class="carousel-next" onclick="nextSlide()">›</button>
             </div>
-            <div style="text-align: center; margin-top: 30px;">
-                <a href="news.html" class="btn">查看更多新闻</a>
+            
+            <!-- 轮播指示器 -->
+            <div class="carousel-indicators">
+                <span class="indicator active" onclick="currentSlide(1)"></span>
+                <span class="indicator" onclick="currentSlide(2)"></span>
+                <span class="indicator" onclick="currentSlide(3)"></span>
             </div>
         </div>
     </section>
@@ -201,9 +124,9 @@
                         <li><a href="index.html">首页</a></li>
                         <li><a href="about.html">关于我们</a></li>
                         <li><a href="services.html">服务项目</a></li>
-                        <li><a href="cases.html">成功案例</a></li>
+                        <li><a href="cases.html">技术合作</a></li>
                         <li><a href="news.html">新闻中心</a></li>
-                        <li><a href="jobs.html">人才招聘</a></li>
+                        <li><a href="jobs.html">加入我们</a></li>
                         <li><a href="contact.html">联系我们</a></li>
                     </ul>
                 </div>
