--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,9 @@
 
     <!-- 页面横幅 -->
     <section class="page-banner">
-        <div class="banner-title">联系我们</div>
+        <div class="container">
+            <h1 class="banner-title">联系我们</h1>
+        </div>
     </section>
 
     <!-- 联系我们主体 -->
