--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="description" content="云南悦恩环保技术咨询有限公司提供专业的环保咨询、污染治理、环境检测、排污许可申报等一站式环保服务">
     <meta name="keywords" content="环保服务,环境治理,污染治理,环保咨询,排污许可,环境检测">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="css/search.css">
     <!-- 粒子效果样式 -->
     <link rel="stylesheet" href="css/particles.css">
+    <!-- AI聊天悬浮窗样式 -->
+    <link rel="stylesheet" href="css/ai-chat.css">
 </head>
 <body class="homepage">
     <!-- 页头 -->
@@ -167,5 +170,63 @@
     <script src="js/search.js"></script>
     <!-- 粒子效果脚本 -->
     <script src="js/particles.js"></script>
+    <!-- AI聊天悬浮窗 -->
+    <div class="ai-chat-float" onclick="openAIChat()">
+        <svg width="80" height="80" viewBox="0 0 128 128" xmlns="http://www.w3.org/2000/svg">
+            <style type="text/css">
+                .st0{fill:#FF5050;}
+                .st1{fill:#FFFFFF;}
+                .st2{fill:#9B0270;}
+                .st3{fill:#FFD952;}
+                .st4{fill:#FF9D00;}
+                .st5{fill:#DFE8F4;}
+                .st6{fill:#52EFBB;}
+                .st7{fill:#33BC8B;}
+                .st8{fill:#0795FF;}
+                .st9{fill:#500599;}
+                .st10{fill:#4D28A8;}
+                .st11{fill:#35DC86;}
+                .st12{fill:#27A88F;}
+            </style>
+            <g>
+                <g>
+                    <g>
+                        <rect class="st11" height="28.3" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -1.3554 28.7278)" width="10" x="29" y="1.9"/>
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <rect class="st11" height="10" transform="matrix(0.7071 -0.7071 0.7071 0.7071 16.2163 71.1516)" width="28.3" x="79.9" y="11"/>
+                    </g>
+                </g>
+                <path class="st11" d="M101,43c0-20.4-16.6-37-37-37h0C43.6,6,27,22.6,27,43v3l5,5l-5,5l-5,20l5,20v10h10v21h18v-21h18v21h18v-21h10   V96l5-20l-5-20l-5-5l5-5V43z"/>
+                <g>
+                    <rect class="st12" height="40" width="10" x="17" y="56"/>
+                </g>
+                <g>
+                    <rect class="st12" height="40" width="10" x="101" y="56"/>
+                </g>
+                <g>
+                    <g>
+                        <path class="st12" d="M47.5,22.5L40,14.9c-2.5,2.2-4.8,4.7-6.7,7.5l7.2,7.2L47.5,22.5z"/>
+                    </g>
+                    <g>
+                        <path class="st12" d="M87.5,29.5l7.2-7.2c-1.9-2.8-4.1-5.3-6.7-7.5l-7.6,7.6L87.5,29.5z"/>
+                    </g>
+                </g>
+                <g>
+                    <rect class="st1" height="10" width="74" x="27" y="46"/>
+                </g>
+                <g>
+                    <rect class="st1" height="10" width="10" x="49" y="26"/>
+                </g>
+                <g>
+                    <rect class="st1" height="10" width="10" x="69" y="26"/>
+                </g>
+            </g>
+        </svg>
+    </div>
+    <!-- AI聊天悬浮窗脚本 -->
+    <script src="js/ai-chat.js"></script>
 </body>
 </html>
